--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div id="container"></div>
 </body>
 <script type="module">
-import wasl from "./dist/index.esm.js";
-import validate from "https://cdn.jsdelivr.net/npm/wasl-validate/dist/index.esm.js";
+import wasl from "./external/wasl/dist/index.esm.js";
+import validate from "https://cdn.jsdelivr.net/npm/wasl-validate@0.0.14/dist/index.esm.js";
 
 const path = './app/index.wasl.json' // create a myproject directory next to this html file
 
