Update WASL file to reference the official Component repository

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </body>
 <script type="module">
 import wasl from "./external/wasl/dist/index.esm.js";
+// import wasl from "https://cdn.jsdelivr.net/npm/wasl/dist/index.esm.js";
 import validate from "https://cdn.jsdelivr.net/npm/wasl-validate@0.0.14/dist/index.esm.js";
 
 const path = './app/index.wasl.json' // create a myproject directory next to this html file
